deploy: 678f4e336c95e1f9bca0af81ef0414aed22c5e12

--- a/enums/requestcontenttypes.html
+++ b/enums/requestcontenttypes.html
@@ -95,7 +95,7 @@
 					<div class="tsd-signature tsd-kind-icon">FORM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/enums/http-apis.ts#L23">src/enums/http-apis.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L23">enums/http-apis.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">IMAGE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;image/jpg, image/png&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/enums/http-apis.ts#L21">src/enums/http-apis.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L21">enums/http-apis.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">JSON<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;application/json&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/enums/http-apis.ts#L22">src/enums/http-apis.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L22">enums/http-apis.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -167,9 +167,6 @@
 					<li class=" tsd-kind-enum">
 						<a href="requestprotocol.html" class="tsd-kind-icon">Request<wbr>Protocol</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
 						<a href="../interfaces/idictionary.html" class="tsd-kind-icon">IDictionary</a>
 					</li>
@@ -214,6 +211,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
