--- a/enums/requestprotocol.html
+++ b/enums/requestprotocol.html
@@ -87,7 +87,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/enums/http-apis.ts#L2">src/enums/http-apis.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L2">enums/http-apis.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -97,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTPS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;https&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/enums/http-apis.ts#L3">src/enums/http-apis.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/enums/http-apis.ts#L3">enums/http-apis.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -146,9 +146,6 @@
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
 						<a href="../interfaces/idictionary.html" class="tsd-kind-icon">IDictionary</a>
 					</li>
@@ -193,6 +190,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
