--- a/modules.html
+++ b/modules.html
@@ -76,7 +76,6 @@
 						<section class="tsd-index-section ">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface"><a href="interfaces/ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a></li>
 								<li class="tsd-kind-interface tsd-has-type-parameter"><a href="interfaces/idictionary.html" class="tsd-kind-icon">IDictionary</a></li>
 								<li class="tsd-kind-interface"><a href="interfaces/isize.html" class="tsd-kind-icon">ISize</a></li>
 							</ul>
@@ -102,6 +101,7 @@
 								<li class="tsd-kind-variable"><a href="modules.html#default_wait_milliseconds" class="tsd-kind-icon">DEFAULT_<wbr>WAIT_<wbr>MILLISECONDS</a></li>
 								<li class="tsd-kind-variable"><a href="modules.html#falsy" class="tsd-kind-icon">FALSY</a></li>
 								<li class="tsd-kind-variable"><a href="modules.html#truthy" class="tsd-kind-icon">TRUTHY</a></li>
+								<li class="tsd-kind-variable"><a href="modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a></li>
 								<li class="tsd-kind-variable"><a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a></li>
 							</ul>
 						</section>
@@ -123,7 +123,7 @@
 					<div class="tsd-signature tsd-kind-icon">TArray<wbr>Filter&lt;Item&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Item</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/arrays.ts#L11">src/types/arrays.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/arrays.ts#L11">types/arrays.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -173,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">TCallback&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Return</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><a href="modules.html#temptycallback" class="tsd-signature-type" data-tsd-kind="Type alias">TEmptyCallback</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/functions.ts#L10">src/types/functions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L10">types/functions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -197,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMElement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Document</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Window</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/dom.ts#L3">src/types/dom.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/dom.ts#L3">types/dom.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -207,7 +207,7 @@
 					<div class="tsd-signature tsd-kind-icon">TDOMEvent<wbr>Handler&lt;EventType&gt;<span class="tsd-signature-symbol">:</span> <a href="modules.html#tfunction" class="tsd-signature-type" data-tsd-kind="Type alias">TFunction</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">EventType</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/dom.ts#L15">src/types/dom.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/dom.ts#L15">types/dom.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -236,7 +236,7 @@
 					<div class="tsd-signature tsd-kind-icon">TEmpty<wbr>Callback<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/functions.ts#L7">src/types/functions.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L7">types/functions.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -266,7 +266,7 @@
 					<div class="tsd-signature tsd-kind-icon">TFunction&lt;Tuple, Return&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">...</span>args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Tuple</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/functions.ts#L2">src/types/functions.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L2">types/functions.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -311,7 +311,7 @@
 					<div class="tsd-signature tsd-kind-icon">TProp<wbr>Type&lt;TObj, TProp&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TObj</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">TProp</span><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/utils.ts#L2">src/types/utils.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/utils.ts#L2">types/utils.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -335,7 +335,7 @@
 					<div class="tsd-signature tsd-kind-icon">TType<wbr>Callback&lt;Return, Options&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Options</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">Return</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/types/functions.ts#L15">src/types/functions.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/types/functions.ts#L15">types/functions.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -383,7 +383,7 @@
 					<div class="tsd-signature tsd-kind-icon">APP_<wbr>URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/browser.ts#L13">src/constants/browser.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L23">constants/browser.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -399,7 +399,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>PAGE_<wbr>SIZE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> = 25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/default-values.ts#L1">src/constants/default-values.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/default-values.ts#L1">constants/default-values.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -409,7 +409,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>WAIT_<wbr>MILLISECONDS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">300</span><span class="tsd-signature-symbol"> = 300</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/default-values.ts#L3">src/constants/default-values.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/default-values.ts#L3">constants/default-values.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -419,7 +419,7 @@
 					<div class="tsd-signature tsd-kind-icon">FALSY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/expressions.ts#L23">src/constants/expressions.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/expressions.ts#L23">constants/expressions.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -441,7 +441,7 @@
 					<div class="tsd-signature tsd-kind-icon">TRUTHY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/expressions.ts#L11">src/constants/expressions.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/expressions.ts#L11">constants/expressions.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -458,12 +458,27 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable">
+					<a name="hascssvariablessupport" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> has<wbr>Css<wbr>Variables<wbr>Support</h3>
+					<div class="tsd-signature tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L11">constants/browser.ts:11</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>cache the result of <code>window.CSS.supports(&#39;(--a: 0)&#39;)</code></p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable">
 					<a name="isbrowser" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> is<wbr>Browser</h3>
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Browser<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/browser.ts#L6">src/constants/browser.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/browser.ts#L6">constants/browser.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -486,7 +501,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/utils.ts#L16">src/constants/utils.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/utils.ts#L16">constants/utils.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -508,7 +523,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/constants/utils.ts#L13">src/constants/utils.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/constants/utils.ts#L13">constants/utils.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -568,9 +583,6 @@
 					<li class=" tsd-kind-enum">
 						<a href="enums/requestprotocol.html" class="tsd-kind-icon">Request<wbr>Protocol</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="interfaces/ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
 						<a href="interfaces/idictionary.html" class="tsd-kind-icon">IDictionary</a>
 					</li>
@@ -615,6 +627,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
