--- a/index.html
+++ b/index.html
@@ -137,9 +137,6 @@
 					<li class=" tsd-kind-enum">
 						<a href="enums/requestprotocol.html" class="tsd-kind-icon">Request<wbr>Protocol</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="interfaces/ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
-					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
 						<a href="interfaces/idictionary.html" class="tsd-kind-icon">IDictionary</a>
 					</li>
@@ -184,6 +181,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
