--- a/interfaces/idictionary.html
+++ b/interfaces/idictionary.html
@@ -129,9 +129,6 @@
 					<li class=" tsd-kind-enum">
 						<a href="../enums/requestprotocol.html" class="tsd-kind-icon">Request<wbr>Protocol</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-has-type-parameter">
@@ -180,6 +177,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
