--- a/interfaces/isize.html
+++ b/interfaces/isize.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">height<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/interfaces/index.ts#L4">src/interfaces/index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/interfaces/index.ts#L4">interfaces/index.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/7362ae2/src/interfaces/index.ts#L3">src/interfaces/index.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/erkobridee/ts-definitions-common/blob/678f4e3/src/interfaces/index.ts#L3">interfaces/index.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -148,9 +148,6 @@
 					</li>
 					<li class=" tsd-kind-enum">
 						<a href="../enums/requestprotocol.html" class="tsd-kind-icon">Request<wbr>Protocol</a>
-					</li>
-					<li class=" tsd-kind-interface">
-						<a href="ibasewindow.html" class="tsd-kind-icon">IBase<wbr>Window</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-has-type-parameter">
 						<a href="idictionary.html" class="tsd-kind-icon">IDictionary</a>
@@ -208,6 +205,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#truthy" class="tsd-kind-icon">TRUTHY</a>
+					</li>
+					<li class=" tsd-kind-variable">
+						<a href="../modules.html#hascssvariablessupport" class="tsd-kind-icon">has<wbr>Css<wbr>Variables<wbr>Support</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../modules.html#isbrowser" class="tsd-kind-icon">is<wbr>Browser</a>
